--- a/javascript-es6/package.json
+++ b/javascript-es6/package.json
@@ -2,5 +2,9 @@
   "name": "javascript-es6",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/preset-env": "^7.9.6"
+  }
 }
