--- a/javascript-es6/package.json
+++ b/javascript-es6/package.json
@@ -9,6 +9,6 @@
     "@babel/preset-env": "^7.9.6"
   },
   "scripts": {
-    "dev": "babel ./main.js -o ./bundle.js"
+    "dev": "babel ./main.js -o ./bundle.js -w"
   }
 }
